tests/fixtures/invalid/divmod_bool_set.py
# Cannot call divmod() with Bool, Set[int]
x = divmod(True, {1, 2, 3})
